[package]
name = "cp-tool"
version = "0.1.0"
authors = ["Denys Smirnov <dendi239@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
url = {}
tokio = { version = "0.2", features = ["full"] }
reqwest = { version = "0.10.7", features = ["json", "cookies"] }
structopt = { version = "0.3", features = [ "paw" ] }
