[package]
name = "cp-tool"
version = "0.1.0"
authors = ["Denys Smirnov <dendi239@gmail.com>"]
edition = "2018"
license-file = "LICENSE"

[[bin]]
name = "cpt"
path = "src/main.rs"

[dependencies]
url = "2.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "0.2", features = ["full"] }
reqwest = { version = "0.10.7", features = ["json", "cookies"] }
structopt = { version = "0.3", features = [ "paw" ] }
rpassword = "5.0"
thiserror = "1.0"
open = "1"
async-trait = "0.1.38"
